# CanonFodder

./: .env.example  .gitignore  Dockerfile  EDA.py  LICENSE  LLM.py  README.md  alembic.ini  canonization.py  csv_autofetch.py  dev_canon.py  dev_lblink.py  dev_profile.py  docker-compose.yml  docker_compose.yml  drafting.py  enrich.py  helper.py  lfAPI.py  main.py  mbAPI.py  pyproject.toml  requirements-airflow.txt  requirements-dev.txt  requirements.txt  run_autofetch.bat  run_error_log.txt  run_log.txt  setup.py  supervisord.conf
CSV/: autofetch.py  make_countries.py
DB/: __init__.py  artist_unification.db  canonfodder.db  common.py  dataschema.py  guard_intervals.py  models.py  mysql.py  ops.py  sqlite.py  testerqueries.sql
HTTP/: client.py  lfAPI.py  mbAPI.py
JSON/: palettes.json  selected_features.json
ML/: xgb.json  xgb_columns.json
PQ/: ac.parquet  artist_info.parquet  avc.parquet  c.parquet  forevian_scrobble.parquet  scrobble.parquet  scrobbles_20250424_192037.parquet  scrobbles_20250517_131900.parquet  uc.parquet
alembic/: env.py
config/: pyproject.toml  requirements.txt  setup.py
corefunc/: canon_rules.yaml  canonizer.py  data_cleaning.py  data_gathering.py  dataprofiler.py  enrich.py  llm.py  model_server.py  pipeline.py  visualizations.py  workflow.py
dags/: AIRFLOW_CONFIG_EXPLANATION.md  DOCKER_AIRFLOW.md  README.md  WINDOWS_AIRFLOW.md  canonfodder_weekly_dag.py  cf_ingest.py  fix_airflow_windows.py
dev/: canon.py  lblink.py  profile.ipynb  profile.py  test_interactive_mode.py
docs/: AIRFLOW_COMPATIBILITY.md  AIRFLOW_USERS_COMMAND.md  (+10 more)
(+70 files in other folders)
